[package]
name = "gotobed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotly = "0.8.4"
ureq = { version = "2.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.6.2", features = ["serde"] }
regex = "1.5"
tiny_http = "0.11"
crossbeam-channel = "0.5"
clap = "3.0.0-beta.4"
ascii = "1.0.0"
